fix: resolve all PR #107 blockers + add critical stock decrement
Fixes #101

All 4 original blockers resolved:
1. ✅ Atomicity - Implemented MongoDB transactions for order + stock + cart
2. ✅ Legacy products - Added defensive checks to prevent crashes
3. ✅ Frontend UI - Fixed image field reference (image1 -> image)
4. ✅ Test setup - Exported app, added npm test script, jest config

Critical feature added:
5. ✅ Stock decrement - Products now properly reduce inventory on order

Changes:
- backend/controller/orderController.js: Added transactions, stock decrement, legacy handling
- backend/routes/orderRoutes.js: Fixed route paths (added missing /)
- backend/index.js: Export app, conditional server start for tests
- backend/package.json: Added test script and jest/supertest dependencies
- backend/tests/orderSecurity.test.js: Enhanced with stock tests and proper auth
- frontend/src/pages/Order.jsx: Fixed image field from image1 to image
- backend/jest.config.js: Jest configuration for ES modules
- backend/.env.test: Test environment configuration
- backend/tests/README.md: Complete test documentation
- backend/scripts/migrateLegacyProducts.js: Migration tool for legacy products

All operations are now atomic - order creation, stock decrement, and cart
clearing succeed together or fail together with proper rollback.

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "migrate:legacy-products": "node scripts/migrateLegacyProducts.js",
+    "add:stock": "node scripts/addStockToProducts.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -31,6 +34,8 @@
   "devDependencies": {
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
